--- a/nav_bar 1/nav_bar.css
+++ b/nav_bar 1/nav_bar.css
@@ -17,7 +17,17 @@ header nav
 }
 header nav .sujet
 {
-    margin : 2rem;
+    margin: 2rem;
+    width: 3rem;
+}
+header nav .sujet p
+{
+    text-align: center;
+}
+header nav .sujet:hover .sous-lien
+{
+    display: block;
+    margin-top: 0.5rem;
 }
 img
 {
