--- a/nav_bar 1/nav_bar.css
+++ b/nav_bar 1/nav_bar.css
@@ -5,6 +5,13 @@
 }
 header
 {
+    position: fixed;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+header .bla
+{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -42,4 +49,9 @@ img
 .sous-lien
 {
     display:none;
+}
+main img
+{
+    width: 100%;
+    height: 100vh;
 }
