--- a/nav_bar_tab2/css/index.css
+++ b/nav_bar_tab2/css/index.css
@@ -1,3 +1,23 @@
+@keyframes animation-roll{
+	from{
+		margin-top: -245px;
+		margin-bottom: 0px;
+	}
+	to{
+		margin-top: 0px;
+	}
+}
+
+@keyframes animation-roll-reverse{
+	from{
+		margin-top: 0px;
+	}
+	to{
+		margin-top: -245px;
+		margin-bottom: 0px;
+	}
+}
+
 *{
 	margin: 0;
 	padding: 0;
@@ -12,36 +32,67 @@ a{
 header{
 	position: fixed;
 	width: 100%;
+	height: 10vh;
 }
 
 header nav{
+	padding-top: 2vh;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: flex-end;
 }
 
 .logo{
-	width: 50%;
+	width: 40%;
+}
+
+.logo_a{
+	padding-right: 110px;
 }
 
 #menu a{
-	display: block;
-	margin: 0 auto;
+	
+
 }
 
 #menu{
-
 	display: flex;
 	position: absolute;
 	flex-direction: column;
 	left: 15%;
-	margin-bottom: -100px;
+	margin-bottom: -250px;
 	width: 70%;
-	background-color: cyan;
+	display: none;
+}
+
+.animation-roll{
+	animation-duration: 1s;
+	animation-name: animation-roll;
+}
+
+.animation-roll-reverse{
+	animation-duration: 1s;
+	animation-name: animation-roll-reverse;
+}
+
+#menu a{
+	display: block;
+	padding: 10px 5%;
+	border-bottom: 1px solid black;
+	text-transform: uppercase;
+	font-weight: 600;
+	font-family: 'Open Sans', sans-serif;
+	color: #666;
+	font-size: 14px;
+	margin-left: 30px;
+	margin-bottom: 5px;
 }
 
 
+.uk{
+	margin-bottom: -15px;
+}
 
 
 /* -----
@@ -49,10 +100,9 @@ SVG Icons - svgicons.sparkk.fr
 ----- */
 
 #hamburger {
-  width: 3em;
-  height: 3em;
+  width: 2em;
+  height: 2em;
   margin-top: -0.5em;
-  margin-right: 4em;
   cursor: pointer;
 }
 
