--- a/nav_bar_phone_1/css/index.css
+++ b/nav_bar_phone_1/css/index.css
@@ -36,7 +36,7 @@ header{
 
 }
 header nav{
-	background-color: aquamarine;
+	background: linear-gradient(#8c2327 0%, 60% ,#0075ff);
 	padding-top: 5%;
 	height: 100vh;
 	display: flex;
@@ -63,7 +63,7 @@ header nav #menu a{
 	text-transform: uppercase;
 	font-family: Montserrat,Arial, Helvetica, sans-serif;
 	font-weight: 600;
-	color: black;
+	color: white;
 }
 
 header #hamburger{
